<resources>
    <string name="app_name">Songify</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="favourites_btn">Favourites</string>
    <string name="playlist_btn">Playlists</string>
    <string name="total_songs">Total Songs :</string>
    <string name="world_of_music">World Of Music</string>
    <string name="song_name">Song Name</string>
    <string name="song_album">Song Album</string>
    <string name="back_btn">Back Button</string>
    <string name="previous_btn">Previous Button</string>
    <string name="pause_btn">Pause Button</string>
    <string name="next_btn">Next Button</string>
    <string name="statr_tv">00:00</string>
    <string name="end_tv">Loading..</string>
    <string name="repeat_button">Repeat</string>
    <string name="equalizer_btn">Equalizer</string>
    <string name="timer_btn">Timer</string>
    <string name="share_btn">Share</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="app_icon">Icon</string>
    <string name="text_nav">Welcome to,\nWorld of Music</string>
    <string name="min_15">15 Minutes</string>
    <string name="min_30">30 Minutes</string>
    <string name="min_60">60 Minutes</string>
    <string name="search_view">Search View</string>
    <string name="song_img">Song Image</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="playlist_delete">Delete</string>
    <string name="user_name">Your Name</string>
    <string name="add_song">Add</string>
    <string name="remove_all">Remove All</string>
    <string name="search_song">Search Song</string>
    <string name="topic_feedback">Topic i.e.  Suggestions, Error, etc.</string>
    <string name="email_feedback">kabirseth21200136@gmail.com</string>
    <string name="send">Send</string>
    <string name="version_name">Version Name</string>
    <string name="set_theme">Set Theme</string>
    <string name="sort_by">Sort By</string>
</resources>