<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardFDB"
    app:cardBackgroundColor="?attr/helper"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    app:cardElevation="16dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="16dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeedbackActivity"
    android:elevation="16dp"
    android:orientation="vertical"
    android:layout_margin="16dp">
  <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/topicFA"
    android:layout_width="match_parent"
    android:layout_height="80dp"
      android:textColor="?attr/helperPD"
    android:hint="@string/topic_feedback"
    android:gravity="center|start"
      android:inputType="textEmailSubject"
      android:padding="16dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailFA"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/email_feedback"
        android:gravity="center|start"
        android:enabled="false"
        android:textColor="?attr/helperPD"
        android:inputType="textEmailAddress"
        android:padding="16dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/feedbackMsgFA"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:hint="@string/feedback"
        android:textColor="?attr/helperPD"
        android:gravity="center|start"
        android:padding="16dp"/>
    <Button
        android:id="@+id/sendFA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/themeColor"
        android:text="@string/send"
        android:layout_gravity="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_margin="5dp"
        />
</LinearLayout>
</androidx.cardview.widget.CardView>