<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    android:layout_height="match_parent"
    android:background="?attr/helper"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--For Buttons-->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
              android:layout_margin="8dp"
                app:cardElevation="16dp"
                android:padding="12dp"
                app:cardBackgroundColor="?attr/helper"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/shuffleButton"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="@string/shuffle_btn"
                        android:drawableTop="@drawable/shuffle_icon"
                        android:text="@string/shuffle_btn"
                        android:textAllCaps="false"
                        android:textColor="@color/black" />

                    <Button
                        android:id="@+id/favouriteButton"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="@string/favourites_btn"
                        android:drawableTop="@drawable/favorite_icon"
                        android:text="@string/favourites_btn"
                        android:textAllCaps="false"
                        android:textColor="@color/black" />

                    <Button
                        android:id="@+id/playlistButton"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="@string/playlist_btn"
                        android:drawableTop="@drawable/playlist_icon"
                        android:text="@string/playlist_btn"
                        android:textAllCaps="false"
                        android:textColor="@color/black" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardElevation="16dp"
                android:layout_gravity="center|end"
                android:layout_margin="5dp"
                app:cardBackgroundColor="?attr/helper"
                app:cardCornerRadius="16dp">
            <TextView
                android:id="@+id/totalSongs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_songs"
                android:padding="8dp"
                android:textColor="@color/black" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="16dp"
                app:cardBackgroundColor="?attr/helper"
                app:cardCornerRadius="16dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/musicRV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbarThumbVertical="@drawable/scroll_bar_icon"
                android:scrollbars="vertical" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>


            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/nowPlaying"
                android:name="com.example.songify.NowPlaying"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout="@layout/fragment_now_playing" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"/>
</androidx.drawerlayout.widget.DrawerLayout>