<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent" android:layout_width="match_parent"
    android:background="#F8F5F8"
    tools:context=".SettingsActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        app:cardElevation="24dp"
        android:layout_marginTop="30dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="24dp"
        android:background="#D2D0D0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="3dp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/set_theme"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="8dp"
                android:padding="8dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/coolPinkTheme"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/circle_icon"
                        android:tint="@color/pink" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/coolBlueTheme"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/circle_icon"
                        android:tint="@color/purple_200" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/coolPurpleTheme"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/circle_icon"
                        android:tint="@color/cool_blue" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/coolGreenTheme"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/circle_icon"
                        android:tint="@color/cool_green" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/coolYellowTheme"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/circle_icon"
                        android:tint="@color/yellow" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="8dp"
                android:padding="8dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    android:paddingHorizontal="16dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center|start"
                        android:paddingStart="5dp"
                        android:text="@string/sort_by"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/sortBtn"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:paddingStart="5dp"
                        android:src="@drawable/sort_icon"
                        android:tint="@color/pink"
                        tools:ignore="RtlSymmetry" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:padding="8dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="16dp">

                <TextView
                    android:id="@+id/versionName"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/version_name"
                    android:textColor="@color/black"
                    android:textSize="24sp" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>